Improve aesthetics of topic form

--- a/app/lib/app_web/templates/topic/form.html.eex
+++ b/app/lib/app_web/templates/topic/form.html.eex
@@ -5,191 +5,170 @@
     </div>
   <% end %>
 
-<div>
-  <%= label f, :title, class: "" %>
-  <div>
-  <%= text_input f, :title, class: "" %>
-  <%= error_tag f, :title %>
-  </div>
+<fieldset>
+<%= label f, :title, class: "" %>
+<%= text_input f, :title, class: "" %>
+<%= error_tag f, :title %>
+</fieldset>
+
+<fieldset>
+<%= label f, :description, class: "" %>
+<%= textarea f, :description, class: "" %>
+<%= error_tag f, :description %>
+</fieldset>
+
+<fieldset>
+<%= label f, :slug, class: "with-tooltip" %>
+<span class="tooltip">(?)
+  <span class="tooltiptext">Unique string that you'd like to appear in the URL for this topic (e.g., 'yale.chat/t/your-slug-here'); the actual URL scheme is planned for a future release.</span>
+</span>
+<%= text_input f, :slug, class: "" %>
+<%= error_tag f, :slug %>
+</fieldset>
+
+<div class="grid-2-column">
+<fieldset>
+<%= label f, :opened_at, class: "with-tooltip" %>
+<span class="tooltip">(?)
+  <span class="tooltiptext">The date and time at which the topic should open for students to post</span>
+</span>
+<%= text_input f, :opened_at, default: @current_time, class: "" %>
+<%= error_tag f, :opened_at %>
+</fieldset>
+
+<fieldset>
+<%= label f, :closed_at, class: "with-tooltip" %>
+<span class="tooltip">(?)
+  <span class="tooltiptext">The date and time at which the topic will close, preventing students from posting</span>
+</span>
+<%= text_input f, :closed_at, default: @current_time, class: "" %>
+<%= error_tag f, :closed_at %>
+</fieldset>
+
+<fieldset>
+<%= label f, :visible, class: "with-tooltip" do %>
+  Topic is visible to students
+<% end %>
+<span class="tooltip">(?)
+  <span class="tooltiptext">If unchecked, only professors and TAs will be able to view the topic</span>
+</span>
+<%= checkbox f, :visible, class: "" %>
+<%= error_tag f, :visible %>
+</fieldset>
+
+<fieldset>
+<%= label f, :allow_submissions, class: "with-tooltip" do %>
+  Allow student submissions to topic
+<% end %>
+<span class="tooltip">(?)
+  <span class="tooltiptext">If unchecked, students are not able to submit responses to the topic. They can still rate and comment on other submissions unless those options are disabled below.</span>
+</span>
+
+<%= checkbox f, :allow_submissions, class: "" %>
+<%= error_tag f, :allow_submissions %>
+</fieldset>
+
+<fieldset>
+<%= label f, :allow_submission_voting, class: "with-tooltip" do %>
+  Allow student voting/rating on others' submissions
+<% end %>
+<span class="tooltip">(?)
+  <span class="tooltiptext">If unchecked, students are not able to rate other submissions. They can still post submissions or comments unless those options are disabled.</span>
+</span>
+
+<%= checkbox f, :allow_submission_voting, class: "" %>
+<%= error_tag f, :allow_submission_voting %>
+</fieldset>
+
+<fieldset>
+<%= label f, :anonymous, class: "with-tooltip" do %>
+  Hide submitter names from submissions and comments on this topic
+<% end %>
+<span class="tooltip">(?)
+  <span class="tooltiptext">If checked, all submissions and comments will be anonymous. If unchecked, the author's names for submissions and comments will be shown.</span>
+</span>
+<%= checkbox f, :anonymous, class: "" %>
+<%= error_tag f, :anonymous %>
+</fieldset>
+
+<fieldset>
+<%= label f, :allow_submission_comments, class: "with-tooltip" do %>
+    Allow student to comment on others' submissions
+<% end %>
+<span class="tooltip">(?)
+  <span class="tooltiptext">If unchecked, students are not able to comment on other submissions. They can still post submissions and rate submissions unless those options are disabled above.</span>
+</span>
+
+<%= checkbox f, :allow_submission_comments, class: "" %>
+<%= error_tag f, :allow_submission_comments %>
+</fieldset>
+
+<fieldset>
+<%= label f, :show_submission_comments, class: "with-tooltip" do %>
+  Allow students to see each others' comments
+<% end %>
+<span class="tooltip">(?)
+  <span class="tooltiptext">If unchecked, students will only be able to see their own comments on submissions. Professors and TAs will still see all comments.</span>
+</span>
+<%= checkbox f, :show_submission_comments, class: "" %>
+<%= error_tag f, :show_submission_comments %>
+</fieldset>
+
+<fieldset>
+<%= label f, :show_submission_ratings, class: "with-tooltip" do %>
+  Allow students to see the average rating for each submission
+<% end %>
+<span class="tooltip">(?)
+  <span class="tooltiptext">If unchecked, students will only see their own rating for a submission. Professors and TAs will still see the count and average of all ratings.</span>
+</span>
+<%= checkbox f, :show_submission_ratings, class: "" %>
+<%= error_tag f, :show_submission_ratings %>
+</fieldset>
+
+<fieldset>
+<%= label f, :show_user_submissions, class: "with-tooltip" do %>
+  Allow students to see each others' submissions
+<% end %>
+<span class="tooltip">(?)
+  <span class="tooltiptext">If unchecked, students will only see their own submissions. Professors and TAs will still see all submissions.</span>
+</span>
+<%= checkbox f, :show_user_submissions, class: "" %>
+<%= error_tag f, :show_user_submissions %>
+</fieldset>
 </div>
 
-<div>
-  <%= label f, :description, class: "" %>
-  <div>
-  <%= textarea f, :description, class: "" %>
-  <%= error_tag f, :description %>
-  </div>
+<div class="grid-2-column">
+<fieldset>
+<%= label f, :user_submission_limit, class: "with-tooltip" do %>
+  Max number of submissions by a single student (0 = unlimited)
+<% end %>
+<span class="tooltip">(?)
+  <span class="tooltiptext">Limit the number of submissions a single student can make in response to this topic. If set to 0, students can submit an unlimited number of submissions.</span>
+</span>
+
+<%= number_input f, :user_submission_limit, min: 0, class: "" %>
+<%= error_tag f, :user_submission_limit %>
+</fieldset>
+
+<fieldset>
+<%= label f, :sort, class: "" do %>
+  Sort order for student submissions in this topic
+<% end %>
+<%= select f, :sort, @sort_list, class: "" %>
+<%= error_tag f, :sort %>
+</fieldset>
 </div>
 
-<div>
-  <%= label f, :slug, class: "with-tooltip" %>
-  <span="title: Unique string that you'd like to appear in the URL for this topic (e.g., 'yale.chat/t/your-slug-here'); the actual URL scheme is planned for a future release"="icon: question; ratio: 0.7" class="tooltip-icon"></span>
-  <div>
-  <%= text_input f, :slug, class: "" %>
-  <%= error_tag f, :slug %>
-  </div>
-</div>
+<%= if String.starts_with?(@action, "/courses") do %>
+  <fieldset>
+  <%= label f, "Post topic to sections", class: "with-tooltip" %>
+  <span class="tooltip">(?)
+  <span class="tooltiptext">Select the sections to which you'd like to post this topic. You can select multiple sections by holding Ctrl or Shift when clicking.</span>
+</span>
+  <%= multiple_select f, :sections, @sections, selected: @selected_sections, class: "" %>
+  <%= error_tag f, :sections %>
+  </fieldset>
+<% end %>
 
-<div>
-  <%= label f, :opened_at, class: "with-tooltip" %>
-  <span="title: The date and time at which the topic should open for students to post"="icon: question; ratio: 0.7" class="tooltip-icon"></span>
-  <div>
-  <%= datetime_select f, :opened_at, default: {{@current_time.year, @current_time.month, @current_time.day},
-{@current_time.hour, @current_time.minute, @current_time.second}}, class: "" %>
-  <%= error_tag f, :opened_at %>
-  </div>
-</div>
-
-<div>
-  <%= label f, :closed_at, class: "with-tooltip" %>
-  <span="title: The date and time at which the topic will close, preventing students from posting"="icon: question; ratio: 0.7" class="tooltip-icon"></span>
-  <div>
-  <%= datetime_select f, :closed_at, default: {{@current_time.year, @current_time.month + 1, @current_time.day},
-{@current_time.hour, @current_time.minute, @current_time.second}}, class: "" %>
-  <%= error_tag f, :closed_at %>
-  </div>
-</div>
-
-<div>
-
-  <%= label f, :visible, class: "with-tooltip" do %>
-    Topic is visible to students
-  <% end %>
-  <span="title: If unchecked, only professors and TAs will be able to view the topic"="icon: question; ratio: 0.7" class="tooltip-icon"></span>
-
-  <div>
-  <%= checkbox f, :visible, class: "" %>
-  <%= error_tag f, :visible %>
-  </div>
-</div>
-
-<div>
-
-  <%= label f, :allow_submissions, class: "with-tooltip" do %>
-    Allow student submissions to topic
-  <% end %>
-  <span="title: If unchecked, students are not able to submit responses to the topic. They can still rate and comment on other submissions unless those options are disabled below."="icon: question; ratio: 0.7" class="tooltip-icon"></span>
-
-  <div>
-  <%= checkbox f, :allow_submissions, class: "" %>
-  <%= error_tag f, :allow_submissions %>
-  </div>
-</div>
-
-<div>
-
-  <%= label f, :allow_submission_voting, class: "with-tooltip" do %>
-    Allow student voting/rating on others' submissions
-  <% end %>
-  <span="title: If unchecked, students are not able to rate other submissions. They can still post submissions or comments unless those options are disabled."="icon: question; ratio: 0.7" class="tooltip-icon"></span>
-
-  <div>
-  <%= checkbox f, :allow_submission_voting, class: "" %>
-  <%= error_tag f, :allow_submission_voting %>
-  </div>
-</div>
-
-<div>
-
-  <%= label f, :anonymous, class: "with-tooltip" do %>
-    Hide submitter names from submissions and comments on this topic
-  <% end %>
-  <span="title: If checked, all submissions and comments will be anonymous. If unchecked, the author's names for submissions and comments will be shown."="icon: question; ratio: 0.7" class="tooltip-icon"></span>
-
-  <div>
-  <%= checkbox f, :anonymous, class: "" %>
-  <%= error_tag f, :anonymous %>
-  </div>
-</div>
-
-<div>
-
-  <%= label f, :allow_submission_comments, class: "with-tooltip" do %>
-      Allow student to comment on others' submissions
-  <% end %>
-  <span="title: If unchecked, students are not able to comment on other submissions. They can still post submissions and rate submissions unless those options are disabled above."="icon: question; ratio: 0.7" class="tooltip-icon"></span>
-
-
-  <div>
-  <%= checkbox f, :allow_submission_comments, class: "" %>
-  <%= error_tag f, :allow_submission_comments %>
-  </div>
-</div>
-
-<div>
-
-  <%= label f, :show_submission_comments, class: "with-tooltip" do %>
-    Allow students to see each others' comments
-  <% end %>
-  <span="title: If unchecked, students will only be able to see their own comments on submissions. Professors and TAs will still see all comments."="icon: question; ratio: 0.7" class="tooltip-icon"></span>
-  <div>
-  <%= checkbox f, :show_submission_comments, class: "" %>
-  <%= error_tag f, :show_submission_comments %>
-  </div>
-</div>
-
-<div>
-  <%= label f, :show_submission_ratings, class: "with-tooltip" do %>
-    Allow students to see the average rating for each submission
-  <% end %>
-  <span="title: If unchecked, students will only see their own rating for a submission. Professors and TAs will still see the count and average of all ratings."="icon: question; ratio: 0.7" class="tooltip-icon"></span>
-  <div>
-  <%= checkbox f, :show_submission_ratings, class: "" %>
-  <%= error_tag f, :show_submission_ratings %>
-  </div>
-</div>
-
-<div>
-
-  <%= label f, :show_user_submissions, class: "with-tooltip" do %>
-    Allow students to see each others' submissions
-  <% end %>
-  <span="title: If unchecked, students will only see their own submissions. Professors and TAs will still see all submissions."="icon: question; ratio: 0.7" class="tooltip-icon"></span>
-  <div>
-  <%= checkbox f, :show_user_submissions, class: "" %>
-  <%= error_tag f, :show_user_submissions %>
-  </div>
-</div>
-
-<div>
-
-  <%= label f, :user_submission_limit, class: "with-tooltip" do %>
-    Max number of submissions by a single student (0 = unlimited)
-  <% end %>
-  <span="title: Limit the number of submissions a single student can make in response to this topic. If set to 0, students can submit an unlimited number of submissions."="icon: question; ratio: 0.7" class="tooltip-icon"></span>
-
-  <div>
-  <%= number_input f, :user_submission_limit, min: 0, class: "" %>
-  <%= error_tag f, :user_submission_limit %>
-  </div>
-</div>
-
-<div>
-
-  <%= label f, :sort, class: "" do %>
-      Sort order for student submissions in this topic
-  <% end %>
-
-
-  <div>
-  <%= select f, :sort, @sort_list, class: "" %>
-  <%= error_tag f, :sort %>
-  </div>
-</div>
-
-  <%= if String.starts_with?(@action, "/courses") do %>
-
-  <div>
-    <%= label f, "Post topic to sections", class: "with-tooltip" %>
-    <span="title: Select the sections to which you'd like to post this topic. You can select multiple sections by holding Ctrl or Shift when clicking."="icon: question; ratio: 0.7" class="tooltip-icon"></span>
-  <div>
-    <%= multiple_select f, :sections, @sections, selected: @selected_sections, class: "" %>
-    <%= error_tag f, :sections %>
-  </div>
-  </div>
-  <% end %>
-
-  <div>
-    <%= submit "Save", class: "" %>
-  </div>
+<%= submit "Save", class: "" %>
 <% end %>
