--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -552,6 +552,10 @@ checkbox, input, radio, select, textarea {
 	font: inherit;
 }
 
+input[type="checkbox"] {
+  height: 1.3em !important;
+}
+
 
 // Form stuff
 .bottom-form {
@@ -620,7 +624,7 @@ button:hover {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-column-gap: 2*$default-margin;
   grid-row-gap: 3*$default-margin;
   padding: 2*$default-margin 0 4*$default-margin 0;
@@ -629,6 +633,30 @@ button:hover {
 .full-width-2-column {
   grid-column: 1 / 3;
 }
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 200px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+ 
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
 /* Import style for default CSS classes (Phoenix LiveView) */
 @import "../../deps/phoenix_live_view/assets/css/live_view.css";
 @import "./menus.scss"
