Enhance datetime_local_input with flatpickr

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -586,6 +586,11 @@ input, select:not([multiple]):not([size]) {
 	vertical-align: middle;
 	display: inline-block;
 }
+div.flatpickr-calendar {
+  div.flatpickr-current-month {
+    padding: 0;
+  }
+}
 
 button {
 	margin: 0;
