--- a/app/lib/app_web/templates/topic/form.html.eex
+++ b/app/lib/app_web/templates/topic/form.html.eex
@@ -32,7 +32,12 @@
 <span class="tooltip">(?)
   <span class="tooltiptext">The date and time at which the topic should open for students to post</span>
 </span>
-<%= datetime_local_input f, :opened_at, default: @current_time, class: "" %>
+<% opened_value = if !is_nil(@changeset.changes["closed_at"]) do
+  @changeset.changes.closed_at
+else
+  @current_time
+end %>
+<%= datetime_local_input f, :opened_at, value: date_to_html!(opened_value), class: "" %>
 <%= error_tag f, :opened_at %>
 </fieldset>
 
@@ -41,7 +46,13 @@
 <span class="tooltip">(?)
   <span class="tooltiptext">The date and time at which the topic will close, preventing students from posting</span>
 </span>
-<%= datetime_local_input f, :closed_at, default: @current_time, class: "" %>
+<% closed_value = if !is_nil(@changeset.changes["closed_at"]) do
+  @changeset.changes.closed_at
+else
+  @current_time
+end %>
+<% closed_value = shift_date(closed_value, 1) %>
+<%= datetime_local_input f, :closed_at, value: date_to_html!(closed_value), class: "" %>
 <%= error_tag f, :closed_at %>
 </fieldset>
 
