--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -634,9 +634,22 @@ button:hover {
   grid-row-gap: 3*$default-margin;
   padding: 2*$default-margin 0 4*$default-margin 0;
   align-items: center;
+  
+  .full-width {
+    grid-column: -1/1;
+  }
 }
-.full-width-2-column {
-  grid-column: 1 / 3;
+
+.grid-3-column {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  padding: 2*$default-margin 0 4*$default-margin 0;
+  align-items: center;
+
+  .full-width {
+    grid-column: -1/1;
+  }
 }
 
 .tooltip {
