--- a/app/lib/app_web/templates/section__role/bulk_new.html.eex
+++ b/app/lib/app_web/templates/section__role/bulk_new.html.eex
@@ -32,6 +32,7 @@
   else
     current_time("America/New_York")
   end %>
+  <% to_value = shift_date(to_value, 12) %>
   <%= datetime_local_input f, :valid_to, value: date_to_html!(to_value) %>
   <%= error_tag f, :valid_to %>
 </fieldset>
