--- a/app/lib/app_web/templates/layout/user-menu.html.eex
+++ b/app/lib/app_web/templates/layout/user-menu.html.eex
@@ -1,26 +1,31 @@
 
-		
+
 
 
 <div>
 <%= if is_nil((@conn.assigns[:current_user])) do %>
     <a href="/auth/cas">Log In
-    <svg width="12" height="12" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="user"><circle fill="none" stroke="#fff" stroke-width="1.1" cx="9.9" cy="6.4" r="4.4"></circle><path fill="none" stroke="#fff" stroke-width="1.1" d="M1.5,19 C2.3,14.5 5.8,11.2 10,11.2 C14.2,11.2 17.7,14.6 18.5,19.2"></path></svg>
+    <svg class="icon-login" width="12" height="12" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" data-svg="user">
+      <circle stroke-width="1.1" cx="9.9" cy="6.4" r="4.4"></circle>
+      <path stroke-width="1.1" d="M1.5,19 C2.3,14.5 5.8,11.2 10,11.2 C14.2,11.2 17.7,14.6 18.5,19.2"></path>
+    </svg>
     </a>
 <% else %>
   <input id="sidebar__trigger" class="sidebar__trigger" type="checkbox" />
   <label for="sidebar__trigger">
     <span class="sidebar__button sidebar__button-open">
       <%= @conn.private.plug_session["uid"] %>
-      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"><path stroke="#fff" fill="#fff" d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"/></svg>
+      <svg class="icon-user" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+        <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"/>
+      </svg>
 
     </span>
     <span class="sidebar__button sidebar__button-close">
       <%= @conn.private.plug_session["uid"] %>
-      <svg viewBox="0 0 18 18" width="18" height="18">
-        <rect fill="#fff" width="18" height="2" rx="2"></rect>
-        <rect fill="#fff" y="6" width="18" height="2" rx="2"></rect>
-        <rect fill="#fff" y="12" width="18" height="2" rx="2"></rect>
+      <svg class="icon-menu" viewBox="0 0 18 18" width="18" height="18">
+        <rect width="18" height="2" rx="2"></rect>
+        <rect y="6" width="18" height="2" rx="2"></rect>
+        <rect y="12" width="18" height="2" rx="2"></rect>
       </svg>
     </span>
   </label>
